<resources>
    <string name="app_name">AZ Health Monitor</string>
    <string name="textHeader">Patient Details :</string>
    <string name="textFirst">First Name</string>
    <string name="textLast">Last Name</string>
    <string name="textID">Patient ID</string>
    <string name="textAge">Age</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>
    <string name="textMonitor">Monitor: </string>
    <string name="textMonitorVal">00.0</string>
    <string name="buttonSave">Save</string>
    <string name="buttonStart">Start</string>
    <string name="buttonStop">Stop</string>
    <string name="buttonUpload">Upload</string>
    <string name="buttonDownload">Download</string>
    <string name="aboutHead">CSE 535 : Mobile Computing</string>
    <string name="aboutAssign">Assignment No. 02</string>
    <string name="aboutText">
        <b>App Name :</b> AZ Health Monitor\n\n
        <b>Version :</b> 2.0\n\n
        <b>Author :</b> Abhishek Zambre, Mayank Khullar\n\n
        <b>Website :</b> <a href="abhiz.me" target="_blank">abhiz.me</a>\n\n
        <b>Class :</b> Master of Computer Science (MCS), Arizona State University\n\n
        <b>Description :</b> Extension to v1.0 with addition to Network and Database Connectivity.\n\n
        Light sensor from v1.0 is replaced with <b>Accelerometer</b> sensor.\n\n Added 3 new buttons. <b>Save</b> creates a new database, starts sensor, and inserts values in table.
        <b>Upload</b> will upload database file to the server. <b>Download</b> will download database file from server and will display contents of it on Graph and Text Fields.
    </string>
</resources>
